# dosho

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  images-dev.yml  images.yml  publish.yml
docs/: conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_ext/: cab_catalog.py
docs/api/: index.rst
docs/concepts/: authoring.rst
docs/reference/: cabs.rst
src/dosho/: __init__.py  _builder.py  cli.py  images.py  images.yaml  registry.py
src/dosho/cabs/: __init__.py  aegean.py  aimfast.py  aoflagger.py  bdsf.py  breizorro.py  casaplotms.py  casatasks.py  chgcentre.py  crystalball.py  cubical.py  ddfacet.py  eidos.py  flagms.py  killms.py  mosaic_queen.py  msutils.py  owlcat_plotelev.py  pyddi.py  quartical.py  ragavi.py  rfinder.py  rmtools.py  shadems.py  simms.py  simms_skysim.py  smops.py  sofia2.py  spimple.py  tigger.py  tricolour.py  wsclean.py
src/dosho/cargo/aoflagger/: Dockerfile
src/dosho/cargo/base-astro/: Dockerfile
src/dosho/cargo/casa6/: Dockerfile  casasiteconfig.py
src/dosho/cargo/cubical/: Dockerfile
src/dosho/cargo/ddfacet/: Dockerfile
src/dosho/cargo/killms/: Dockerfile
src/dosho/cargo/pip/: Dockerfile
src/dosho/cargo/ragavi/: Dockerfile
src/dosho/cargo/simms/: Dockerfile
src/dosho/cargo/sofia2/: Dockerfile
src/dosho/cargo/wsclean/: Dockerfile
src/dosho/psteps/: casaplotms.py
tests/: test_bdsf.py  test_builder.py  test_cab_catalog.py  test_casaplotms.py  test_casatasks.py  test_casatasks_extended.py  test_cli.py  test_cubical.py  test_ddfacet.py  test_flat_cabs.py  test_images.py  test_killms.py  test_quartical.py  test_registry.py  test_wsclean.py
