[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dosho"
version = "0.1.0a1"
description = "A shinobi's tool bag -- the native shinobi (stimela-ninja) cab repository"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sphesihle Makhathini", email = "sphemakh@gmail.com" },
]
dependencies = [
    "stimela-ninja",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# Documentation build (Sphinx + Furo + autodoc). `uv sync --group docs`.
docs = [
    "sphinx>=7.2",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

# stimela-ninja isn't published to PyPI yet -- points at the local sibling
# checkout for now. Swap for a real version pin (or a git ref) once it is.
[tool.uv.sources]
stimela-ninja = { path = "../stimela-ninja", editable = true }

[project.urls]
Homepage = "https://github.com/SpheMakh/dosho"
Repository = "https://github.com/SpheMakh/dosho"
Issues = "https://github.com/SpheMakh/dosho/issues"
Documentation = "https://dosho.readthedocs.io"

[project.entry-points."shinobi.cabs"]
dosho = "dosho.registry"

[tool.hatch.build.targets.wheel]
packages = ["src/dosho"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/dosho",
    "/README.md",
    "/LICENSE",
    "/AGENTS.md",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
consider_namespace_packages = true

[tool.ruff]
line-length = 100
