[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dosho"
version = "0.1.0b3"
description = "A shinobi's tool bag -- the native shinobi (stimela-ninja) cab repository"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sphesihle Makhathini", email = "sphemakh@gmail.com" },
]
dependencies = [
    "stimela-ninja>=0.1.0b3",
    "pyyaml>=6.0",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=3.5",
]
# Documentation build (Sphinx + Furo + autodoc). `uv sync --group docs`.
docs = [
    "sphinx>=7.2",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]

# Dev-time override: pull stimela-ninja from its origin/main instead of the
# pinned PyPI release, so dosho and stimela-ninja can be developed together
# (e.g. the `positional_head` parset support). Ignored when dosho is built
# for publishing -- consumers still resolve the PyPI `stimela-ninja>=...`
# constraint above.
[tool.uv.sources]
stimela-ninja = { git = "https://github.com/shinobi-dosho/stimela-ninja", branch = "main" }

[project.urls]
Homepage = "https://github.com/SpheMakh/dosho"
Repository = "https://github.com/SpheMakh/dosho"
Issues = "https://github.com/SpheMakh/dosho/issues"
Documentation = "https://dosho.readthedocs.io"

[project.scripts]
dosho = "dosho.cli:main"

[project.entry-points."shinobi.cabs"]
dosho = "dosho.registry"

[tool.hatch.build.targets.wheel]
packages = ["src/dosho"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/dosho",
    "/README.md",
    "/LICENSE",
    "/AGENTS.md",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
consider_namespace_packages = true

[tool.ruff]
line-length = 100
